[package]
name = "rukko"
version = "0.1.0"
edition = "2021"
authors = ["Hallvard Ystad"]
description = "A Rust library for communicating with JVM-based Pekko actors"
license = "MIT"
repository = "https://github.com/hallyhaa/rukko"
readme = "README.md"
keywords = ["pekko", "actor", "distributed", "messaging"]
categories = ["network-programming", "concurrency"]

[dependencies]
tokio = { version = "1.47.0", features = ["net", "io-util", "time", "sync", "rt-multi-thread", "macros"] }
serde_json = "1.0.141"
bytes = "1.10.1"
rand = "0.9.2"
prost = "0.14.1"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
regex = "1.11.1"

[build-dependencies]
prost-build = "0.14.1"
protoc-bin-vendored = "3.2.0"

[lib]
name = "rukko"
path = "src/lib.rs"

