[package]
name = "rukko"
version = "0.1.0"
edition = "2021"
authors = ["Hallvard Ystad"]
description = "A Rust library for communicating with JVM-based Pekko actors"
license = "MIT"
repository = "https://github.com/hallyhaa/rukko"
readme = "README.md"
keywords = ["pekko", "actor", "distributed", "messaging"]
categories = ["network-programming", "concurrency"]

[dependencies]
tokio = { version = "1.48.0", features = ["net", "io-util", "time", "sync", "rt-multi-thread", "macros"] }
serde_json = "1.0.145"
bytes = "1.11.0"
rand = "0.9.2"
prost = "0.14.1"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
regex = "1.12.2"

[build-dependencies]
prost-build = "0.14.1"
protoc-bin-vendored = "3.2.0"

[lib]
name = "rukko"
path = "src/lib.rs"

